Checkpoint report status

--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -246,3 +246,99 @@
   year={2011},
   publisher={BioMed Central}
 }
+
+@article{bindewald2006rna,
+  title={RNA secondary structure prediction from sequence alignments using a network of k-nearest neighbor classifiers},
+  author={Bindewald, Eckart and Shapiro, Bruce A},
+  journal={Rna},
+  volume={12},
+  number={3},
+  pages={342--352},
+  year={2006},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{sato2009centroidfold,
+  title={CENTROIDFOLD: a web server for RNA secondary structure prediction},
+  author={Sato, Kengo and Hamada, Michiaki and Asai, Kiyoshi and Mituyama, Toutai},
+  journal={Nucleic acids research},
+  volume={37},
+  number={suppl 2},
+  pages={W277--W280},
+  year={2009},
+  publisher={Oxford Univ Press}
+}
+
+@article{hamada2009prediction,
+  title={Prediction of RNA secondary structure using generalized centroid estimators},
+  author={Hamada, Michiaki and Kiryu, Hisanori and Sato, Kengo and Mituyama, Toutai and Asai, Kiyoshi},
+  journal={Bioinformatics},
+  volume={25},
+  number={4},
+  pages={465--473},
+  year={2009},
+  publisher={Oxford Univ Press}
+}
+
+@article{shapiro1997predicting,
+  title={Predicting RNA H-type pseudoknots with the massively parallel genetic algorithm},
+  author={Shapiro, Bruce A and Wu, Jin Chu},
+  journal={Computer applications in the biosciences: CABIOS},
+  volume={13},
+  number={4},
+  pages={459--471},
+  year={1997},
+  publisher={Oxford Univ Press}
+}
+
+@article{shapiro1994massively,
+  title={A massively parallel genetic algorithm for RNA secondary structure prediction},
+  author={Shapiro, Bruce A and Navetta, Joseph},
+  journal={The Journal of Supercomputing},
+  volume={8},
+  number={3},
+  pages={195--207},
+  year={1994},
+  publisher={Springer}
+}
+
+@article{hofacker1994fast,
+  title={Fast folding and comparison of RNA secondary structures},
+  author={Hofacker, Ivo L and Fontana, Walter and Stadler, Peter F and Bonhoeffer, L Sebastian and Tacker, Manfred and Schuster, Peter},
+  journal={Monatshefte f{\"u}r Chemie/Chemical Monthly},
+  volume={125},
+  number={2},
+  pages={167--188},
+  year={1994},
+  publisher={Springer}
+}
+
+@article{cruz2012rna,
+  title={RNA-Puzzles: a CASP-like evaluation of RNA three-dimensional structure prediction},
+  author={Cruz, Jos{\'e} Almeida and Blanchet, Marc-Fr{\'e}d{\'e}rick and Boniecki, Michal and Bujnicki, Janusz M and Chen, Shi-Jie and Cao, Song and Das, Rhiju and Ding, Feng and Dokholyan, Nikolay V and Flores, Samuel Coulbourn and others},
+  journal={Rna},
+  volume={18},
+  number={4},
+  pages={610--625},
+  year={2012},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{miao2015rna,
+  title={RNA-Puzzles Round II: assessment of RNA structure prediction programs applied to three large RNA structures},
+  author={Miao, Zhichao and Adamiak, Ryszard W and Blanchet, Marc-Fr{\'e}d{\'e}rick and Boniecki, Michal and Bujnicki, Janusz M and Chen, Shi-Jie and Cheng, Clarence and Chojnowski, Grzegorz and Chou, Fang-Chieh and Cordero, Pablo and others},
+  journal={Rna},
+  year={2015},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{laing2010computational,
+  title={Computational approaches to 3D modeling of RNA},
+  author={Laing, Christian and Schlick, Tamar},
+  journal={Journal of Physics: Condensed Matter},
+  volume={22},
+  number={28},
+  pages={283101},
+  year={2010},
+  publisher={IOP Publishing}
+}
