--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -342,3 +342,47 @@
   year={2010},
   publisher={IOP Publishing}
 }
+
+@article{das2007automated,
+  title={Automated de novo prediction of native-like RNA tertiary structures},
+  author={Das, Rhiju and Baker, David},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={37},
+  pages={14664--14669},
+  year={2007},
+  publisher={National Acad Sciences}
+}
+
+@article{ban2000complete,
+  title={The complete atomic structure of the large ribosomal subunit at 2.4 {\AA} resolution},
+  author={Ban, Nenad and Nissen, Poul and Hansen, Jeffrey and Moore, Peter B and Steitz, Thomas A},
+  journal={Science},
+  volume={289},
+  number={5481},
+  pages={905--920},
+  year={2000},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{parisien2008mc,
+  title={The MC-Fold and MC-Sym pipeline infers RNA structure from sequence data},
+  author={Parisien, Marc and Major, Francois},
+  journal={Nature},
+  volume={452},
+  number={7183},
+  pages={51--55},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{ding2008ab,
+  title={Ab initio RNA folding by discrete molecular dynamics: from structure prediction to folding mechanisms},
+  author={Ding, Feng and Sharma, Shantanu and Chalasani, Poornima and Demidov, Vadim V and Broude, Natalia E and Dokholyan, Nikolay V},
+  journal={Rna},
+  volume={14},
+  number={6},
+  pages={1164--1173},
+  year={2008},
+  publisher={Cold Spring Harbor Lab}
+}
