--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -386,3 +386,43 @@
   year={2008},
   publisher={Cold Spring Harbor Lab}
 }
+
+@article{das2010atomic,
+  title={Atomic accuracy in predicting and designing noncanonical RNA structure},
+  author={Das, Rhiju and Karanicolas, John and Baker, David},
+  journal={Nature methods},
+  volume={7},
+  number={4},
+  pages={291--294},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{cao2011physics,
+  title={Physics-based de novo prediction of RNA 3D structures},
+  author={Cao, Song and Chen, Shi-Jie},
+  journal={The Journal of Physical Chemistry B},
+  volume={115},
+  number={14},
+  pages={4216--4226},
+  year={2011},
+  publisher={ACS Publications}
+}
+
+@article{cao2005predicting,
+  title={Predicting RNA folding thermodynamics with a reduced chain representation model},
+  author={Cao, Song and Chen, Shi-Jie},
+  journal={Rna},
+  volume={11},
+  number={12},
+  pages={1884--1897},
+  year={2005},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@techreport{case2010amber,
+  title={Amber 11},
+  author={Case, David A and Darden, TA and Cheatham, TE and Simmerling, Carlos L and Wang, J and Duke, Robert E and Luo, Ray and Walker, RC and Zhang, W and Merz, KM and others},
+  year={2010},
+  institution={University of California}
+}
